 packagelon com.twittelonr.cr_mixelonr.candidatelon_gelonnelonration

import com.twittelonr.cr_mixelonr.modelonl.CandidatelonGelonnelonrationInfo
import com.twittelonr.cr_mixelonr.modelonl.InitialAdsCandidatelon
import com.twittelonr.cr_mixelonr.modelonl.ModelonlConfig
import com.twittelonr.cr_mixelonr.modelonl.ModulelonNamelons
import com.twittelonr.cr_mixelonr.modelonl.SimilarityelonnginelonInfo
import com.twittelonr.cr_mixelonr.modelonl.SourcelonInfo
import com.twittelonr.cr_mixelonr.modelonl.TwelonelontWithCandidatelonGelonnelonrationInfo
import com.twittelonr.cr_mixelonr.modelonl.TwelonelontWithScorelon
import com.twittelonr.cr_mixelonr.param.ConsumelonrsBaselondUselonrAdGraphParams
import com.twittelonr.cr_mixelonr.param.ConsumelonrBaselondWalsParams
import com.twittelonr.cr_mixelonr.param.ConsumelonrelonmbelonddingBaselondCandidatelonGelonnelonrationParams
import com.twittelonr.cr_mixelonr.param.GlobalParams
import com.twittelonr.cr_mixelonr.param.IntelonrelonstelondInParams
import com.twittelonr.cr_mixelonr.param.ProducelonrBaselondCandidatelonGelonnelonrationParams
import com.twittelonr.cr_mixelonr.param.SimClustelonrsANNParams
import com.twittelonr.cr_mixelonr.param.TwelonelontBaselondCandidatelonGelonnelonrationParams
import com.twittelonr.cr_mixelonr.param.deloncidelonr.CrMixelonrDeloncidelonr
import com.twittelonr.cr_mixelonr.param.deloncidelonr.DeloncidelonrConstants
import com.twittelonr.cr_mixelonr.similarity_elonnginelon.ConsumelonrBaselondWalsSimilarityelonnginelon
import com.twittelonr.cr_mixelonr.similarity_elonnginelon.ConsumelonrsBaselondUselonrAdGraphSimilarityelonnginelon
import com.twittelonr.cr_mixelonr.similarity_elonnginelon.FiltelonrUtil
import com.twittelonr.cr_mixelonr.similarity_elonnginelon.HnswANNelonnginelonQuelonry
import com.twittelonr.cr_mixelonr.similarity_elonnginelon.HnswANNSimilarityelonnginelon
import com.twittelonr.cr_mixelonr.similarity_elonnginelon.ProducelonrBaselondUselonrAdGraphSimilarityelonnginelon
import com.twittelonr.cr_mixelonr.similarity_elonnginelon.SimClustelonrsANNSimilarityelonnginelon
import com.twittelonr.cr_mixelonr.similarity_elonnginelon.SimClustelonrsANNSimilarityelonnginelon.Quelonry
import com.twittelonr.cr_mixelonr.similarity_elonnginelon.StandardSimilarityelonnginelon
import com.twittelonr.cr_mixelonr.similarity_elonnginelon.TwelonelontBaselondUselonrAdGraphSimilarityelonnginelon
import com.twittelonr.cr_mixelonr.thriftscala.LinelonItelonmInfo
import com.twittelonr.cr_mixelonr.thriftscala.SimilarityelonnginelonTypelon
import com.twittelonr.cr_mixelonr.thriftscala.SourcelonTypelon
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.simclustelonrs_v2.common.ModelonlVelonrsions
import com.twittelonr.simclustelonrs_v2.common.TwelonelontId
import com.twittelonr.simclustelonrs_v2.common.UselonrId
import com.twittelonr.simclustelonrs_v2.thriftscala.elonmbelonddingTypelon
import com.twittelonr.simclustelonrs_v2.thriftscala.IntelonrnalId
import com.twittelonr.storelonhaus.RelonadablelonStorelon
import com.twittelonr.timelonlinelons.configapi
import com.twittelonr.timelonlinelons.configapi.Params
import com.twittelonr.util.Futurelon

import javax.injelonct.Injelonct
import javax.injelonct.Namelond
import javax.injelonct.Singlelonton

@Singlelonton
caselon class AdsCandidatelonSourcelonsRoutelonr @Injelonct() (
  activelonPromotelondTwelonelontStorelon: RelonadablelonStorelon[TwelonelontId, Selonq[LinelonItelonmInfo]],
  deloncidelonr: CrMixelonrDeloncidelonr,
  @Namelond(ModulelonNamelons.SimClustelonrsANNSimilarityelonnginelon) simClustelonrsANNSimilarityelonnginelon: StandardSimilarityelonnginelon[
    Quelonry,
    TwelonelontWithScorelon
  ],
  @Namelond(ModulelonNamelons.TwelonelontBaselondUselonrAdGraphSimilarityelonnginelon)
  twelonelontBaselondUselonrAdGraphSimilarityelonnginelon: StandardSimilarityelonnginelon[
    TwelonelontBaselondUselonrAdGraphSimilarityelonnginelon.Quelonry,
    TwelonelontWithScorelon
  ],
  @Namelond(ModulelonNamelons.ConsumelonrsBaselondUselonrAdGraphSimilarityelonnginelon)
  consumelonrsBaselondUselonrAdGraphSimilarityelonnginelon: StandardSimilarityelonnginelon[
    ConsumelonrsBaselondUselonrAdGraphSimilarityelonnginelon.Quelonry,
    TwelonelontWithScorelon
  ],
  @Namelond(ModulelonNamelons.ProducelonrBaselondUselonrAdGraphSimilarityelonnginelon)
  producelonrBaselondUselonrAdGraphSimilarityelonnginelon: StandardSimilarityelonnginelon[
    ProducelonrBaselondUselonrAdGraphSimilarityelonnginelon.Quelonry,
    TwelonelontWithScorelon
  ],
  @Namelond(ModulelonNamelons.TwelonelontBaselondTwHINANNSimilarityelonnginelon)
  twelonelontBaselondTwHINANNSimilarityelonnginelon: HnswANNSimilarityelonnginelon,
  @Namelond(ModulelonNamelons.ConsumelonrelonmbelonddingBaselondTwHINANNSimilarityelonnginelon) consumelonrTwHINANNSimilarityelonnginelon: HnswANNSimilarityelonnginelon,
  @Namelond(ModulelonNamelons.ConsumelonrBaselondWalsSimilarityelonnginelon)
  consumelonrBaselondWalsSimilarityelonnginelon: StandardSimilarityelonnginelon[
    ConsumelonrBaselondWalsSimilarityelonnginelon.Quelonry,
    TwelonelontWithScorelon
  ],
  globalStats: StatsReloncelonivelonr,
) {

  import AdsCandidatelonSourcelonsRoutelonr._

  val stats: StatsReloncelonivelonr = globalStats.scopelon(this.gelontClass.gelontSimplelonNamelon)

  delonf felontchCandidatelons(
    relonquelonstUselonrId: UselonrId,
    sourcelonSignals: Selont[SourcelonInfo],
    relonalGraphSelonelonds: Map[UselonrId, Doublelon],
    params: configapi.Params
  ): Futurelon[Selonq[Selonq[InitialAdsCandidatelon]]] = {

    val simClustelonrsANN1ConfigId = params(SimClustelonrsANNParams.SimClustelonrsANN1ConfigId)

    val twelonelontBaselondSANNMinScorelon = params(
      TwelonelontBaselondCandidatelonGelonnelonrationParams.SimClustelonrsMinScorelonParam)
    val twelonelontBaselondSANN1Candidatelons =
      if (params(TwelonelontBaselondCandidatelonGelonnelonrationParams.elonnablelonSimClustelonrsANN1Param)) {
        Futurelon.collelonct(
          CandidatelonSourcelonsRoutelonr.gelontTwelonelontBaselondSourcelonInfo(sourcelonSignals).toSelonq.map { sourcelonInfo =>
            gelontSimClustelonrsANNCandidatelons(
              relonquelonstUselonrId,
              Somelon(sourcelonInfo),
              params,
              simClustelonrsANN1ConfigId,
              twelonelontBaselondSANNMinScorelon)
          })
      } elonlselon Futurelon.valuelon(Selonq.elonmpty)

    val simClustelonrsANN2ConfigId = params(SimClustelonrsANNParams.SimClustelonrsANN2ConfigId)
    val twelonelontBaselondSANN2Candidatelons =
      if (params(TwelonelontBaselondCandidatelonGelonnelonrationParams.elonnablelonSimClustelonrsANN2Param)) {
        Futurelon.collelonct(
          CandidatelonSourcelonsRoutelonr.gelontTwelonelontBaselondSourcelonInfo(sourcelonSignals).toSelonq.map { sourcelonInfo =>
            gelontSimClustelonrsANNCandidatelons(
              relonquelonstUselonrId,
              Somelon(sourcelonInfo),
              params,
              simClustelonrsANN2ConfigId,
              twelonelontBaselondSANNMinScorelon)
          })
      } elonlselon Futurelon.valuelon(Selonq.elonmpty)

    val twelonelontBaselondUagCandidatelons =
      if (params(TwelonelontBaselondCandidatelonGelonnelonrationParams.elonnablelonUAGParam)) {
        Futurelon.collelonct(
          CandidatelonSourcelonsRoutelonr.gelontTwelonelontBaselondSourcelonInfo(sourcelonSignals).toSelonq.map { sourcelonInfo =>
            gelontTwelonelontBaselondUselonrAdGraphCandidatelons(Somelon(sourcelonInfo), params)
          })
      } elonlselon Futurelon.valuelon(Selonq.elonmpty)

    val relonalGraphInNelontworkBaselondUagCandidatelons =
      if (params(ConsumelonrsBaselondUselonrAdGraphParams.elonnablelonSourcelonParam)) {
        gelontRelonalGraphConsumelonrsBaselondUselonrAdGraphCandidatelons(relonalGraphSelonelonds, params).map(Selonq(_))
      } elonlselon Futurelon.valuelon(Selonq.elonmpty)

    val producelonrBaselondUagCandidatelons =
      if (params(ProducelonrBaselondCandidatelonGelonnelonrationParams.elonnablelonUAGParam)) {
        Futurelon.collelonct(
          CandidatelonSourcelonsRoutelonr.gelontProducelonrBaselondSourcelonInfo(sourcelonSignals).toSelonq.map { sourcelonInfo =>
            gelontProducelonrBaselondUselonrAdGraphCandidatelons(Somelon(sourcelonInfo), params)
          })
      } elonlselon Futurelon.valuelon(Selonq.elonmpty)

    val twelonelontBaselondTwhinAdsCandidatelons =
      if (params(TwelonelontBaselondCandidatelonGelonnelonrationParams.elonnablelonTwHINParam)) {
        Futurelon.collelonct(
          CandidatelonSourcelonsRoutelonr.gelontTwelonelontBaselondSourcelonInfo(sourcelonSignals).toSelonq.map { sourcelonInfo =>
            gelontTwHINAdsCandidatelons(
              twelonelontBaselondTwHINANNSimilarityelonnginelon,
              SimilarityelonnginelonTypelon.TwelonelontBaselondTwHINANN,
              relonquelonstUselonrId,
              Somelon(sourcelonInfo),
              ModelonlConfig.DelonbuggelonrDelonmo)
          })
      } elonlselon Futurelon.valuelon(Selonq.elonmpty)

    val producelonrBaselondSANNMinScorelon = params(
      ProducelonrBaselondCandidatelonGelonnelonrationParams.SimClustelonrsMinScorelonParam)
    val producelonrBaselondSANN1Candidatelons =
      if (params(ProducelonrBaselondCandidatelonGelonnelonrationParams.elonnablelonSimClustelonrsANN1Param)) {
        Futurelon.collelonct(
          CandidatelonSourcelonsRoutelonr.gelontProducelonrBaselondSourcelonInfo(sourcelonSignals).toSelonq.map { sourcelonInfo =>
            gelontSimClustelonrsANNCandidatelons(
              relonquelonstUselonrId,
              Somelon(sourcelonInfo),
              params,
              simClustelonrsANN1ConfigId,
              producelonrBaselondSANNMinScorelon)
          })
      } elonlselon Futurelon.valuelon(Selonq.elonmpty)
    val producelonrBaselondSANN2Candidatelons =
      if (params(ProducelonrBaselondCandidatelonGelonnelonrationParams.elonnablelonSimClustelonrsANN2Param)) {
        Futurelon.collelonct(
          CandidatelonSourcelonsRoutelonr.gelontProducelonrBaselondSourcelonInfo(sourcelonSignals).toSelonq.map { sourcelonInfo =>
            gelontSimClustelonrsANNCandidatelons(
              relonquelonstUselonrId,
              Somelon(sourcelonInfo),
              params,
              simClustelonrsANN2ConfigId,
              producelonrBaselondSANNMinScorelon)
          })
      } elonlselon Futurelon.valuelon(Selonq.elonmpty)

    val intelonrelonstelondInMinScorelon = params(IntelonrelonstelondInParams.MinScorelonParam)
    val intelonrelonstelondInSANN1Candidatelons = if (params(IntelonrelonstelondInParams.elonnablelonSimClustelonrsANN1Param)) {
      gelontSimClustelonrsANNCandidatelons(
        relonquelonstUselonrId,
        Nonelon,
        params,
        simClustelonrsANN1ConfigId,
        intelonrelonstelondInMinScorelon).map(Selonq(_))
    } elonlselon Futurelon.valuelon(Selonq.elonmpty)

    val intelonrelonstelondInSANN2Candidatelons = if (params(IntelonrelonstelondInParams.elonnablelonSimClustelonrsANN2Param)) {
      gelontSimClustelonrsANNCandidatelons(
        relonquelonstUselonrId,
        Nonelon,
        params,
        simClustelonrsANN2ConfigId,
        intelonrelonstelondInMinScorelon).map(Selonq(_))
    } elonlselon Futurelon.valuelon(Selonq.elonmpty)

    val consumelonrTwHINAdsCandidatelons =
      if (params(ConsumelonrelonmbelonddingBaselondCandidatelonGelonnelonrationParams.elonnablelonTwHINParam)) {
        gelontTwHINAdsCandidatelons(
          consumelonrTwHINANNSimilarityelonnginelon,
          SimilarityelonnginelonTypelon.ConsumelonrelonmbelonddingBaselondTwHINANN,
          relonquelonstUselonrId,
          Nonelon,
          ModelonlConfig.DelonbuggelonrDelonmo).map(Selonq(_))
      } elonlselon Futurelon.valuelon(Selonq.elonmpty)

    val consumelonrBaselondWalsCandidatelons =
      if (params(
          ConsumelonrBaselondWalsParams.elonnablelonSourcelonParam
        )) {
        gelontConsumelonrBaselondWalsCandidatelons(sourcelonSignals, params)
      }.map {
        Selonq(_)
      }
      elonlselon Futurelon.valuelon(Selonq.elonmpty)

    Futurelon
      .collelonct(Selonq(
        twelonelontBaselondSANN1Candidatelons,
        twelonelontBaselondSANN2Candidatelons,
        twelonelontBaselondUagCandidatelons,
        twelonelontBaselondTwhinAdsCandidatelons,
        producelonrBaselondUagCandidatelons,
        producelonrBaselondSANN1Candidatelons,
        producelonrBaselondSANN2Candidatelons,
        relonalGraphInNelontworkBaselondUagCandidatelons,
        intelonrelonstelondInSANN1Candidatelons,
        intelonrelonstelondInSANN2Candidatelons,
        consumelonrTwHINAdsCandidatelons,
        consumelonrBaselondWalsCandidatelons,
      )).map(_.flattelonn).map { twelonelontsWithCGInfoSelonq =>
        Futurelon.collelonct(
          twelonelontsWithCGInfoSelonq.map(candidatelons => convelonrtToInitialCandidatelons(candidatelons, stats)))
      }.flattelonn.map { candidatelonsLists =>
        val relonsult = candidatelonsLists.filtelonr(_.nonelonmpty)
        stats.stat("numOfSelonquelonncelons").add(relonsult.sizelon)
        stats.stat("flattelonnCandidatelonsWithDup").add(relonsult.flattelonn.sizelon)
        relonsult
      }
  }

  privatelon[candidatelon_gelonnelonration] delonf convelonrtToInitialCandidatelons(
    candidatelons: Selonq[TwelonelontWithCandidatelonGelonnelonrationInfo],
    stats: StatsReloncelonivelonr
  ): Futurelon[Selonq[InitialAdsCandidatelon]] = {
    val twelonelontIds = candidatelons.map(_.twelonelontId).toSelont
    stats.stat("initialCandidatelonSizelonBelonforelonLinelonItelonmFiltelonr").add(twelonelontIds.sizelon)
    Futurelon.collelonct(activelonPromotelondTwelonelontStorelon.multiGelont(twelonelontIds)).map { linelonItelonmInfos =>
      /** *
       * If linelonItelonmInfo doelons not elonxist, welon will filtelonr out thelon promotelond twelonelont as it cannot belon targelontelond and rankelond in admixelonr
       */
      val filtelonrelondCandidatelons = candidatelons.collelonct {
        caselon candidatelon if linelonItelonmInfos.gelontOrelonlselon(candidatelon.twelonelontId, Nonelon).isDelonfinelond =>
          val linelonItelonmInfo = linelonItelonmInfos(candidatelon.twelonelontId)
            .gelontOrelonlselon(throw nelonw IllelongalStatelonelonxcelonption("Chelonck prelonvious linelon's condition"))

          InitialAdsCandidatelon(
            twelonelontId = candidatelon.twelonelontId,
            linelonItelonmInfo = linelonItelonmInfo,
            candidatelon.candidatelonGelonnelonrationInfo
          )
      }
      stats.stat("initialCandidatelonSizelonAftelonrLinelonItelonmFiltelonr").add(filtelonrelondCandidatelons.sizelon)
      filtelonrelondCandidatelons
    }
  }

  privatelon[candidatelon_gelonnelonration] delonf gelontSimClustelonrsANNCandidatelons(
    relonquelonstUselonrId: UselonrId,
    sourcelonInfo: Option[SourcelonInfo],
    params: configapi.Params,
    configId: String,
    minScorelon: Doublelon
  ) = {

    val simClustelonrsModelonlVelonrsion =
      ModelonlVelonrsions.elonnum.elonnumToSimClustelonrsModelonlVelonrsionMap(params(GlobalParams.ModelonlVelonrsionParam))

    val elonmbelonddingTypelon =
      if (sourcelonInfo.iselonmpty) {
        params(IntelonrelonstelondInParams.IntelonrelonstelondInelonmbelonddingIdParam).elonmbelonddingTypelon
      } elonlselon gelontSimClustelonrsANNelonmbelonddingTypelon(sourcelonInfo.gelont)
    val quelonry = SimClustelonrsANNSimilarityelonnginelon.fromParams(
      if (sourcelonInfo.iselonmpty) IntelonrnalId.UselonrId(relonquelonstUselonrId) elonlselon sourcelonInfo.gelont.intelonrnalId,
      elonmbelonddingTypelon,
      simClustelonrsModelonlVelonrsion,
      configId,
      params
    )

    // dark traffic to simclustelonrs-ann-2
    if (deloncidelonr.isAvailablelon(DeloncidelonrConstants.elonnablelonSimClustelonrsANN2DarkTrafficDeloncidelonrKelony)) {
      val simClustelonrsANN2ConfigId = params(SimClustelonrsANNParams.SimClustelonrsANN2ConfigId)
      val sann2Quelonry = SimClustelonrsANNSimilarityelonnginelon.fromParams(
        if (sourcelonInfo.iselonmpty) IntelonrnalId.UselonrId(relonquelonstUselonrId) elonlselon sourcelonInfo.gelont.intelonrnalId,
        elonmbelonddingTypelon,
        simClustelonrsModelonlVelonrsion,
        simClustelonrsANN2ConfigId,
        params
      )
      simClustelonrsANNSimilarityelonnginelon
        .gelontCandidatelons(sann2Quelonry)
    }

    simClustelonrsANNSimilarityelonnginelon
      .gelontCandidatelons(quelonry).map(_.gelontOrelonlselon(Selonq.elonmpty)).map(_.filtelonr(_.scorelon > minScorelon).map {
        twelonelontWithScorelon =>
          val similarityelonnginelonInfo = SimClustelonrsANNSimilarityelonnginelon
            .toSimilarityelonnginelonInfo(quelonry, twelonelontWithScorelon.scorelon)
          TwelonelontWithCandidatelonGelonnelonrationInfo(
            twelonelontWithScorelon.twelonelontId,
            CandidatelonGelonnelonrationInfo(
              sourcelonInfo,
              similarityelonnginelonInfo,
              Selonq(similarityelonnginelonInfo)
            ))
      })
  }

  privatelon[candidatelon_gelonnelonration] delonf gelontProducelonrBaselondUselonrAdGraphCandidatelons(
    sourcelonInfo: Option[SourcelonInfo],
    params: configapi.Params
  ) = {

    val quelonry = ProducelonrBaselondUselonrAdGraphSimilarityelonnginelon.fromParams(
      sourcelonInfo.gelont.intelonrnalId,
      params
    )
    producelonrBaselondUselonrAdGraphSimilarityelonnginelon
      .gelontCandidatelons(quelonry).map(_.gelontOrelonlselon(Selonq.elonmpty)).map(_.map { twelonelontWithScorelon =>
        val similarityelonnginelonInfo = ProducelonrBaselondUselonrAdGraphSimilarityelonnginelon
          .toSimilarityelonnginelonInfo(twelonelontWithScorelon.scorelon)
        TwelonelontWithCandidatelonGelonnelonrationInfo(
          twelonelontWithScorelon.twelonelontId,
          CandidatelonGelonnelonrationInfo(
            sourcelonInfo,
            similarityelonnginelonInfo,
            Selonq(similarityelonnginelonInfo)
          ))
      })
  }

  privatelon[candidatelon_gelonnelonration] delonf gelontTwelonelontBaselondUselonrAdGraphCandidatelons(
    sourcelonInfo: Option[SourcelonInfo],
    params: configapi.Params
  ) = {

    val quelonry = TwelonelontBaselondUselonrAdGraphSimilarityelonnginelon.fromParams(
      sourcelonInfo.gelont.intelonrnalId,
      params
    )
    twelonelontBaselondUselonrAdGraphSimilarityelonnginelon
      .gelontCandidatelons(quelonry).map(_.gelontOrelonlselon(Selonq.elonmpty)).map(_.map { twelonelontWithScorelon =>
        val similarityelonnginelonInfo = TwelonelontBaselondUselonrAdGraphSimilarityelonnginelon
          .toSimilarityelonnginelonInfo(twelonelontWithScorelon.scorelon)
        TwelonelontWithCandidatelonGelonnelonrationInfo(
          twelonelontWithScorelon.twelonelontId,
          CandidatelonGelonnelonrationInfo(
            sourcelonInfo,
            similarityelonnginelonInfo,
            Selonq(similarityelonnginelonInfo)
          ))
      })
  }

  privatelon[candidatelon_gelonnelonration] delonf gelontRelonalGraphConsumelonrsBaselondUselonrAdGraphCandidatelons(
    relonalGraphSelonelonds: Map[UselonrId, Doublelon],
    params: configapi.Params
  ) = {

    val quelonry = ConsumelonrsBaselondUselonrAdGraphSimilarityelonnginelon
      .fromParams(relonalGraphSelonelonds, params)

    // Thelon intelonrnalId is a placelonholdelonr valuelon. Welon do not plan to storelon thelon full selonelondUselonrId selont.
    val sourcelonInfo = SourcelonInfo(
      sourcelonTypelon = SourcelonTypelon.RelonalGraphIn,
      intelonrnalId = IntelonrnalId.UselonrId(0L),
      sourcelonelonvelonntTimelon = Nonelon
    )
    consumelonrsBaselondUselonrAdGraphSimilarityelonnginelon
      .gelontCandidatelons(quelonry).map(_.gelontOrelonlselon(Selonq.elonmpty)).map(_.map { twelonelontWithScorelon =>
        val similarityelonnginelonInfo = ConsumelonrsBaselondUselonrAdGraphSimilarityelonnginelon
          .toSimilarityelonnginelonInfo(twelonelontWithScorelon.scorelon)
        TwelonelontWithCandidatelonGelonnelonrationInfo(
          twelonelontWithScorelon.twelonelontId,
          CandidatelonGelonnelonrationInfo(
            Somelon(sourcelonInfo),
            similarityelonnginelonInfo,
            Selonq.elonmpty // Atomic Similarity elonnginelon. Helonncelon it has no contributing Selons
          )
        )
      })
  }

  privatelon[candidatelon_gelonnelonration] delonf gelontTwHINAdsCandidatelons(
    similarityelonnginelon: HnswANNSimilarityelonnginelon,
    similarityelonnginelonTypelon: SimilarityelonnginelonTypelon,
    relonquelonstUselonrId: UselonrId,
    sourcelonInfo: Option[SourcelonInfo], // if nonelon, thelonn it's consumelonr-baselond similarity elonnginelon
    modelonl: String
  ): Futurelon[Selonq[TwelonelontWithCandidatelonGelonnelonrationInfo]] = {
    val intelonrnalId =
      if (sourcelonInfo.nonelonmpty) sourcelonInfo.gelont.intelonrnalId elonlselon IntelonrnalId.UselonrId(relonquelonstUselonrId)
    similarityelonnginelon
      .gelontCandidatelons(buildHnswANNQuelonry(intelonrnalId, modelonl)).map(_.gelontOrelonlselon(Selonq.elonmpty)).map(_.map {
        twelonelontWithScorelon =>
          val similarityelonnginelonInfo = SimilarityelonnginelonInfo(
            similarityelonnginelonTypelon = similarityelonnginelonTypelon,
            modelonlId = Somelon(modelonl),
            scorelon = Somelon(twelonelontWithScorelon.scorelon))
          TwelonelontWithCandidatelonGelonnelonrationInfo(
            twelonelontWithScorelon.twelonelontId,
            CandidatelonGelonnelonrationInfo(
              Nonelon,
              similarityelonnginelonInfo,
              Selonq(similarityelonnginelonInfo)
            ))
      })
  }

  privatelon[candidatelon_gelonnelonration] delonf gelontConsumelonrBaselondWalsCandidatelons(
    sourcelonSignals: Selont[SourcelonInfo],
    params: configapi.Params
  ): Futurelon[Selonq[TwelonelontWithCandidatelonGelonnelonrationInfo]] = {
    // Felontch sourcelon signals and filtelonr thelonm baselond on agelon.
    val signals = FiltelonrUtil.twelonelontSourcelonAgelonFiltelonr(
      gelontConsumelonrBaselondWalsSourcelonInfo(sourcelonSignals).toSelonq,
      params(ConsumelonrBaselondWalsParams.MaxTwelonelontSignalAgelonHoursParam))

    val candidatelonsOptFut = consumelonrBaselondWalsSimilarityelonnginelon.gelontCandidatelons(
      ConsumelonrBaselondWalsSimilarityelonnginelon.fromParams(signals, params)
    )
    val twelonelontsWithCandidatelonGelonnelonrationInfoOptFut = candidatelonsOptFut.map {
      _.map { twelonelontsWithScorelons =>
        val sortelondCandidatelons = twelonelontsWithScorelons.sortBy(-_.scorelon)
        val filtelonrelondCandidatelons =
          FiltelonrUtil.twelonelontAgelonFiltelonr(sortelondCandidatelons, params(GlobalParams.MaxTwelonelontAgelonHoursParam))
        consumelonrBaselondWalsSimilarityelonnginelon.gelontScopelondStats
          .stat("filtelonrelondCandidatelons_sizelon").add(filtelonrelondCandidatelons.sizelon)

        val twelonelontsWithCandidatelonGelonnelonrationInfo = filtelonrelondCandidatelons.map { twelonelontWithScorelon =>
          {
            val similarityelonnginelonInfo =
              ConsumelonrBaselondWalsSimilarityelonnginelon.toSimilarityelonnginelonInfo(twelonelontWithScorelon.scorelon)
            TwelonelontWithCandidatelonGelonnelonrationInfo(
              twelonelontWithScorelon.twelonelontId,
              CandidatelonGelonnelonrationInfo(
                Nonelon,
                similarityelonnginelonInfo,
                Selonq.elonmpty // Atomic Similarity elonnginelon. Helonncelon it has no contributing Selons
              )
            )
          }
        }
        val maxCandidatelonNum = params(GlobalParams.MaxCandidatelonNumPelonrSourcelonKelonyParam)
        twelonelontsWithCandidatelonGelonnelonrationInfo.takelon(maxCandidatelonNum)
      }
    }
    for {
      twelonelontsWithCandidatelonGelonnelonrationInfoOpt <- twelonelontsWithCandidatelonGelonnelonrationInfoOptFut
    } yielonld twelonelontsWithCandidatelonGelonnelonrationInfoOpt.toSelonq.flattelonn
  }
}

objelonct AdsCandidatelonSourcelonsRoutelonr {
  delonf gelontSimClustelonrsANNelonmbelonddingTypelon(
    sourcelonInfo: SourcelonInfo
  ): elonmbelonddingTypelon = {
    sourcelonInfo.sourcelonTypelon match {
      caselon SourcelonTypelon.TwelonelontFavoritelon | SourcelonTypelon.Relontwelonelont | SourcelonTypelon.OriginalTwelonelont |
          SourcelonTypelon.Relonply | SourcelonTypelon.TwelonelontSharelon | SourcelonTypelon.NotificationClick |
          SourcelonTypelon.GoodTwelonelontClick | SourcelonTypelon.VidelonoTwelonelontQualityVielonw |
          SourcelonTypelon.VidelonoTwelonelontPlayback50 =>
        elonmbelonddingTypelon.LogFavLongelonstL2elonmbelonddingTwelonelont
      caselon SourcelonTypelon.UselonrFollow | SourcelonTypelon.UselonrRelonpelonatelondProfilelonVisit | SourcelonTypelon.RelonalGraphOon |
          SourcelonTypelon.FollowReloncommelonndation | SourcelonTypelon.UselonrTrafficAttributionProfilelonVisit |
          SourcelonTypelon.GoodProfilelonClick | SourcelonTypelon.TwicelonUselonrId =>
        elonmbelonddingTypelon.FavBaselondProducelonr
      caselon _ => throw nelonw IllelongalArgumelonntelonxcelonption("sourcelonInfo.sourcelonTypelon not supportelond")
    }
  }

  delonf buildHnswANNQuelonry(intelonrnalId: IntelonrnalId, modelonlId: String): HnswANNelonnginelonQuelonry = {
    HnswANNelonnginelonQuelonry(
      sourcelonId = intelonrnalId,
      modelonlId = modelonlId,
      params = Params.elonmpty
    )
  }

  delonf gelontConsumelonrBaselondWalsSourcelonInfo(
    sourcelonSignals: Selont[SourcelonInfo]
  ): Selont[SourcelonInfo] = {
    val AllowelondSourcelonTypelonsForConsumelonrBaselondWalsSelon = Selont(
      SourcelonTypelon.TwelonelontFavoritelon.valuelon,
      SourcelonTypelon.Relontwelonelont.valuelon,
      SourcelonTypelon.TwelonelontDontLikelon.valuelon, //currelonntly no-op
      SourcelonTypelon.TwelonelontRelonport.valuelon, //currelonntly no-op
      SourcelonTypelon.AccountMutelon.valuelon, //currelonntly no-op
      SourcelonTypelon.AccountBlock.valuelon //currelonntly no-op
    )
    sourcelonSignals.collelonct {
      caselon sourcelonInfo
          if AllowelondSourcelonTypelonsForConsumelonrBaselondWalsSelon.contains(sourcelonInfo.sourcelonTypelon.valuelon) =>
        sourcelonInfo
    }
  }
}
