packagelon com.twittelonr.simclustelonrsann.modulelons

import com.twittelonr.finatra.mtls.thriftmux.modulelons.MtlsThriftWelonbFormsModulelon
import com.twittelonr.finatra.thrift.ThriftSelonrvelonr
import com.twittelonr.simclustelonrs_v2.thriftscala.elonmbelonddingTypelon
import com.twittelonr.simclustelonrs_v2.thriftscala.IntelonrnalId
import com.twittelonr.simclustelonrs_v2.thriftscala.ModelonlVelonrsion
import com.twittelonr.simclustelonrs_v2.thriftscala.SimClustelonrselonmbelonddingId
import com.twittelonr.thriftwelonbforms.MelonthodOptions
import com.twittelonr.thriftwelonbforms.vielonw.SelonrvicelonRelonsponselonVielonw
import com.twittelonr.util.Futurelon
import com.twittelonr.simclustelonrsann.thriftscala.SimClustelonrsANNTwelonelontCandidatelon
import com.twittelonr.simclustelonrsann.thriftscala.Quelonry
import com.twittelonr.simclustelonrsann.thriftscala.SimClustelonrsANNConfig
import com.twittelonr.simclustelonrsann.thriftscala.ScoringAlgorithm
import com.twittelonr.thriftwelonbforms.MelonthodOptions.Accelonss
import scala.relonflelonct.ClassTag
import com.twittelonr.simclustelonrsann.thriftscala.SimClustelonrsANNSelonrvicelon
import scala.collelonction.mutablelon

class CustomMtlsThriftWelonbFormsModulelon[T: ClassTag](selonrvelonr: ThriftSelonrvelonr)
    elonxtelonnds MtlsThriftWelonbFormsModulelon[T](selonrvelonr: ThriftSelonrvelonr) {

  privatelon val Nbsp = "&nbsp;"
  privatelon val LdapGroups = Selonq("reloncosplat-selonnsitivelon-data-melondium", "simclustelonrs-ann-admins")

  ovelonrridelon protelonctelond delonf melonthodOptions: Map[String, MelonthodOptions] = {
    val twelonelontId = 1568796529690902529L
    val sannDelonfaultQuelonry = SimClustelonrsANNSelonrvicelon.GelontTwelonelontCandidatelons.Args(
      quelonry = Quelonry(
        sourcelonelonmbelonddingId = SimClustelonrselonmbelonddingId(
          elonmbelonddingTypelon = elonmbelonddingTypelon.LogFavLongelonstL2elonmbelonddingTwelonelont,
          modelonlVelonrsion = ModelonlVelonrsion.Modelonl20m145k2020,
          intelonrnalId = IntelonrnalId.TwelonelontId(twelonelontId)
        ),
        config = SimClustelonrsANNConfig(
          maxNumRelonsults = 10,
          minScorelon = 0.0,
          candidatelonelonmbelonddingTypelon = elonmbelonddingTypelon.LogFavBaselondTwelonelont,
          maxTopTwelonelontsPelonrClustelonr = 400,
          maxScanClustelonrs = 50,
          maxTwelonelontCandidatelonAgelonHours = 24,
          minTwelonelontCandidatelonAgelonHours = 0,
          annAlgorithm = ScoringAlgorithm.CosinelonSimilarity
        )
      ))

    Selonq("gelontTwelonelontCandidatelons")
      .map(
        _ -> MelonthodOptions(
          delonfaultRelonquelonstValuelon = Somelon(sannDelonfaultQuelonry),
          relonsponselonRelonndelonrelonrs = Selonq(relonndelonrTimelonlinelon),
          allowelondAccelonssOvelonrridelon = Somelon(Accelonss.ByLdapGroup(LdapGroups))
        )).toMap
  }

  val FullAccelonssLdapGroups: Selonq[String] =
    Selonq(
      "reloncosplat-selonnsitivelon-data-melondium",
      "simclustelonrs-ann-admins",
      "reloncos-platform-admins"
    )

  ovelonrridelon protelonctelond delonf delonfaultMelonthodAccelonss: MelonthodOptions.Accelonss = {
    MelonthodOptions.Accelonss.ByLdapGroup(FullAccelonssLdapGroups)
  }

  delonf relonndelonrTimelonlinelon(r: AnyRelonf): Futurelon[SelonrvicelonRelonsponselonVielonw] = {
    val simClustelonrsANNTwelonelontCandidatelons = r match {
      caselon relonsponselon: Itelonrablelon[_] =>
        relonsponselon.map(x => x.asInstancelonOf[SimClustelonrsANNTwelonelontCandidatelon]).toSelonq
      caselon _ => Selonq()
    }
    relonndelonrTwelonelonts(simClustelonrsANNTwelonelontCandidatelons)
  }

  privatelon delonf relonndelonrTwelonelonts(
    simClustelonrsANNTwelonelontCandidatelons: Selonq[SimClustelonrsANNTwelonelontCandidatelon]
  ): Futurelon[SelonrvicelonRelonsponselonVielonw] = {
    val htmlSb = nelonw mutablelon.StringBuildelonr()
    val helonadelonrHtml = s"""<h3>Twelonelont Candidatelons</h3>"""
    val twelonelontsHtml = simClustelonrsANNTwelonelontCandidatelons.map { simClustelonrsANNTwelonelontCandidatelon =>
      val twelonelontId = simClustelonrsANNTwelonelontCandidatelon.twelonelontId
      val scorelon = simClustelonrsANNTwelonelontCandidatelon.scorelon
      s"""<blockquotelon class="twittelonr-twelonelont"><a hrelonf="https://twittelonr.com/twelonelont/statuselons/$twelonelontId"></a></blockquotelon> <b>scorelon:</b> $scorelon <br><br>"""
    }.mkString

    htmlSb ++= helonadelonrHtml
    htmlSb ++= Nbsp
    htmlSb ++= twelonelontsHtml
    Futurelon.valuelon(
      SelonrvicelonRelonsponselonVielonw(
        "SimClustelonrs ANN Twelonelont Candidatelons",
        htmlSb.toString(),
        Selonq("//platform.twittelonr.com/widgelonts.js")
      )
    )
  }
}
